tests/ui/lifetimes/mismatched-lifetime-syntaxes-details/static.stderr
error: lifetime flowing from input to output with different syntax can be confusing
  --> $DIR/static.rs:16:18
   |
LL | fn ampersand(x: &'static u8) -> &u8 {
   |                  ^^^^^^^        --- the lifetime gets resolved as `'static`
   |                  |
   |                  this lifetime flows to the output
   |
note: the lint level is defined here
  --> $DIR/static.rs:1:9
   |
LL | #![deny(mismatched_lifetime_syntaxes)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
help: one option is to consistently use `'static`
   |
LL | fn ampersand(x: &'static u8) -> &'static u8 {
   |                                  +++++++

error: lifetime flowing from input to output with different syntax can be confusing
  --> $DIR/static.rs:23:17
   |
LL | fn brackets(x: &'static u8) -> Brackets {
   |                 ^^^^^^^        -------- the lifetime gets resolved as `'static`
   |                 |
   |                 this lifetime flows to the output
   |
help: one option is to consistently use `'static`
   |
LL | fn brackets(x: &'static u8) -> Brackets<'static> {
   |                                        +++++++++

error: lifetime flowing from input to output with different syntax can be confusing
  --> $DIR/static.rs:30:14
   |
LL | fn comma(x: &'static u8) -> Comma<u8> {
   |              ^^^^^^^        --------- the lifetime gets resolved as `'static`
   |              |
   |              this lifetime flows to the output
   |
help: one option is to consistently use `'static`
   |
LL | fn comma(x: &'static u8) -> Comma<'static, u8> {
   |                                   ++++++++

error: lifetime flowing from input to output with different syntax can be confusing
  --> $DIR/static.rs:35:19
   |
LL | fn underscore(x: &'static u8) -> &'_ u8 {
   |                   ^^^^^^^         -- the lifetime gets resolved as `'static`
   |                   |
   |                   this lifetime flows to the output
   |
help: one option is to consistently use `'static`
   |
LL - fn underscore(x: &'static u8) -> &'_ u8 {
LL + fn underscore(x: &'static u8) -> &'static u8 {
   |

error: aborting due to 4 previous errors

